<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinterface.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <Button
            android:id="@+id/btnPostStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:text="@string/btnPost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_des"
            app:layout_constraintStart_toStartOf="@+id/tv_des" />

        <TextView
            android:id="@+id/tvUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/post_as" />

        <ImageView
            android:id="@+id/imageStoryUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/storyImageDesc"
            app:layout_constraintEnd_toEndOf="@+id/tvUsers"
            app:layout_constraintStart_toStartOf="@+id/tvUsers"
            app:layout_constraintTop_toBottomOf="@+id/tvUsers"
            app:srcCompat="@drawable/baseline_insert_photo_24" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button"
            android:text="@string/cameraChoose"
            app:layout_constraintEnd_toStartOf="@+id/galleryButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageStoryUpload"
            app:layout_constraintTop_toBottomOf="@+id/imageStoryUpload" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button"
            android:text="@string/galleryChoose"
            app:layout_constraintEnd_toEndOf="@+id/imageStoryUpload"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:layout_constraintTop_toBottomOf="@+id/imageStoryUpload" />

        <EditText
            android:id="@+id/tv_des"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="Description"
            android:background="@drawable/border_description"
            android:gravity="top|left"
            android:hint="@string/descriptionStory"
            android:inputType="textMultiLine"
            android:maxHeight="180dp"
            android:maxLines="8"
            android:padding="15dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnPostStory"
            app:layout_constraintEnd_toEndOf="@+id/imageStoryUpload"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageStoryUpload"
            tools:ignore="RtlHardcoded" />

        <ProgressBar
            android:id="@+id/progressBarAddStory"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressBarStyleWhite"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/imageStoryUpload"
            app:layout_constraintEnd_toEndOf="@+id/imageStoryUpload"
            app:layout_constraintStart_toStartOf="@+id/imageStoryUpload"
            app:layout_constraintTop_toBottomOf="@+id/tvUsers" />

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tv_des"
            app:layout_constraintEnd_toEndOf="@+id/imageStoryUpload"
            app:layout_constraintStart_toStartOf="@+id/imageStoryUpload"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton">

            <ImageView
                android:id="@+id/imageLocation"
                android:layout_width="37dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/icon_map_pin"
                app:srcCompat="@drawable/baseline_location_on_24" />

            <TextView
                android:id="@+id/detailLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:maxLines="3"
                android:text="@string/yourLocation" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>