<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardshape"
    tools:context=".userinterface.SplashScreenActivity">

    <TextView
        android:id="@+id/tvSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/storySplash"
        android:alpha="0"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottomSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/bottomSplash"
        android:alpha="0"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/bangkitLogo"
        android:layout_width="203dp"
        android:layout_height="89dp"
        android:contentDescription="@string/imageSplashDesc"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvSplashScreen"
        app:layout_constraintStart_toStartOf="@+id/tvSplashScreen"
        app:layout_constraintTop_toBottomOf="@+id/tvSplashScreen"
        app:srcCompat="@drawable/bangkit_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>