<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="itemStory"
            type="com.example.submissionandroidintermediate.dataclass.StoryDetail" />
        <import type="com.example.submissionandroidintermediate.adapter.StoryListAdapter"/>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageStory"
                    android:layout_width="371dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/content"
                    android:scaleType="centerCrop"
                    app:setPhoto='@{itemStory.photoUrl}'
                    tools:srcCompat="@drawable/erling_haaland_in_2022___manchester_city_football_club__manchester_city__manchester_city_wallpaper" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/authorStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text='@{itemStory.name}'
                android:textColor="@color/black"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:text="@string/nameUser" />

            <TextView
                android:id="@+id/dateStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text='@{StoryListAdapter.formatDateToString(itemStory.createdAt)}'
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/authorStory"
                app:layout_constraintStart_toStartOf="@+id/authorStory"
                app:layout_constraintTop_toBottomOf="@+id/authorStory"
                tools:text="@string/timeCreatedContent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>